--- a/index.html
+++ b/index.html
@@ -1,209 +1,194 @@
 <!doctype html>
 <html lang="ko">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>인터넷센터</title>
-		<link rel="stylesheet" href="css/index.css">
-		<script src="script/jquery-1.12.3.js"></script>
-	</head>
-	<body>
-		<div class="wrapper">
-			<header class="header clear">
-				<div class="logo">
-					<a href="#"><img src="images/logo.jpg" alt="로고"></a>
-				</div>
-				<div class="nav-wrap">
-					<ul class="navs">
-						<li><a href="#">탑</a></li>
-						<li><a href="#">아우터</a></li>
-						<li><a href="#">팬츠</a></li>
-						<li><a href="#">악세서리</a></li>
-					</ul>
-					<ul class="subs clear">
-						<li>
-							<div><a href="#">블라우스</a></div>
-							<div><a href="#">티</a></div>
-							<div><a href="#">셔츠</a></div>
-							<div><a href="#">니트</a></div>
-						</li>
-						<li>
-							<div><a href="#">자켓</a></div>
-							<div><a href="#">셔츠</a></div>
-							<div><a href="#">가디건</a></div>
-							<div><a href="#">머플러</a></div>
-						</li>
-						<li>
-							<div><a href="#">청바지</a></div>
-							<div><a href="#">짧은바지</a></div>
-							<div><a href="#">긴바지</a></div>
-							<div><a href="#">레깅스</a></div>
-						</li>
-						<li>
-							<div><a href="#">귀고리</a></div>
-							<div><a href="#">목걸이</a></div>
-							<div><a href="#">반지</a></div>
-							<div><a href="#">팔찌</a></div>
-						</li>
-					</ul>
-				</div>
-			</header>
-			<main class="banner-wrap">
-				<div class="slides clear">
-					<a href="#"><img src="images/img1.jpg" alt="배너1"></a>
-					<a href="#"><img src="images/img2.jpg" alt="배너2"></a>
-					<a href="#"><img src="images/img3.jpg" alt="배너3"></a>
-					<a href="#"><img src="images/img1.jpg" alt="배너1"></a>
-				</div>
-				<div class="slide-title">
-					<h2>인터넷센터</h2>
-					<h4>방문을 환영합니다!</h4>
-				</div>
-			</main>
-			<section class="content clear">
-				<div class="border-wrap">
-					<div class="tabs clear">
-						<div class="tab-hover">공지사항</div>
-						<div>갤러리</div>
-					</div>
-					<div class="tab">
-						<ul class="notice">
-							<li class="clear">
-								<div class="title">
-									<a class="popup-open">
-										인터넷센터에서 12회 심포지움을 개최합니다.
-									</a>
-								</div>
-								<div class="date">2018-04-10</div>
-							</li>
-							<li class="clear">
-								<div class="title">
-									<a href="#">
-										따뜻한 인터넷을 위한 선플캠페인에 참여하세요.
-									</a>
-								</div>
-								<div class="date">2018-04-10</div>
-							</li>
-							<li class="clear">
-								<div class="title">
-									<a href="#">
-										[자료] 개인정보 보호를 위한 올바른 인터넷 사용법
-									</a>
-								</div>
-								<div class="date">2018-04-09</div>
-							</li>
-							<li class="clear">
-								<div class="title">
-									<a href="#">
-										스몸비에 대응하는 청소년 교육자료를 배포합니다.
-									</a>
-								</div>
-								<div class="date">2018-03-17</div>
-							</li>
-							<li>
-								<div class="title">
-									<a href="#">
-										인터넷센터와 함께 하실 인재를 모집합니다.
-									</a>
-								</div>
-								<div class="date">2018-03-07</div>
-							</li>
-						</ul>
-						<ul class="gallery clear">
-							<li>
-								<a href="#"><img src="images/b1.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="images/b2.jpg" alt=""></a>
-							</li>
-							<li>
-								<a href="#"><img src="images/b3.jpg" alt=""></a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="ban-wrap">
-					<div><a href="#"><img src="images/ban1.jpg" alt="배너1"></a></div>
-					<div><a href="#"><img src="images/ban2.jpg" alt="배너1"></a></div>
-				</div>
-				<div class="link-wrap">
-					<ul class="link">
-						<li>
-							<a href="#">
-								<img src="images/link1.png" alt="링크1">
-								<h4>인터넷 정보수집 발굴</h4>
-								<div>인터넷 사례 조사</div>
-								<div>인터넷문화 관련 자료 수집</div>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<img src="images/link2.png" alt="링크2">
-								<h4>교육 프로그램 개발</h4>
-								<div>인터넷 교육프로그램 연구 </div>
-								<div>인터넷 교육도구 개발</div>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<img src="images/link3.png" alt="링크3">
-								<h4>역기능 예방 및 대응</h4>
-								<div>저작권 침해 예방/대응 연구</div>
-								<div>불법유해정보 유통 예방/대응 연구</div>
-							</a>
-						</li>
-					</ul>
-				</div>
-			</section>
-			<footer class="footer clear">
-				<div class="logo-g">
-					<a href="#"><img src="images/logo-b.jpg" alt="하단로고"></a>
-				</div>
-				<div class="copyright">
-					<h4><a href="#">인터넷센터</a></h4>
-					<div>대표자:준선미 | 개인정보관리책임자:윤우식</div>
-					<div>사업장주소:서울특별시 금천구 가산동 가산디지털2로</div>
-				</div>
-				<div class="escrow">
-					<h5>법적고지</h5>
-					<div><a href="#">개인정보취급방침</a></div>
-					<div><a href="#">개인정보처리방침</a></div>
-				</div>
-			</footer>
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>인터넷센터</title>
+	<link rel="stylesheet" href="css/index.css">
+	<script src="script/jquery-1.12.3.js"></script>
+</head>
+
+<body>
+	<div class="wrapper">
+		<div class="header clear">
+			<div class="logo">
+				<a href="#"><img src="images/logo.jpg" alt="로고"></a>
+			</div>
+			<div class="nav-wrap">
+				<ul class="navs">
+					<li><a href="#">탑</a></li>
+					<li><a href="#">아우터</a></li>
+					<li><a href="#">팬츠</a></li>
+					<li><a href="#">악세서리</a></li>
+				</ul>
+				<ul class="subs clear">
+					<li>
+						<div><a href="#">블라우스</a></div>
+						<div><a href="#">티</a></div>
+						<div><a href="#">셔츠</a></div>
+						<div><a href="#">니트</a></div>
+					</li>
+					<li>
+						<div><a href="#">자켓</a></div>
+						<div><a href="#">셔츠</a></div>
+						<div><a href="#">가디건</a></div>
+						<div><a href="#">머플러</a></div>
+					</li>
+					<li>
+						<div><a href="#">청바지</a></div>
+						<div><a href="#">짧은바지</a></div>
+						<div><a href="#">긴바지</a></div>
+						<div><a href="#">레깅스</a></div>
+					</li>
+					<li>
+						<div><a href="#">귀고리</a></div>
+						<div><a href="#">목걸이</a></div>
+						<div><a href="#">반지</a></div>
+						<div><a href="#">팔찌</a></div>
+					</li>
+				</ul>
+			</div>
 		</div>
-		<div class="popup">
-			<h2 class="tit">
-				인터넷센터에서 12회 심포지움을 개최합니다.
-			</h2>
-			<div class="cont">
-			인터넷센터에서 12회 심포지움을 개최합니다.	 2018-04-10
-			따뜻한 인터넷을 위한 선플캠페인에 참여하세요.	 2018-04-10
+		<div class="banner-wrap">
+			<div class="slides">
+				<div><a href="#"><img src="images/img1.jpg" alt="배너1"></a></div>
+				<div><a href="#"><img src="images/img2.jpg" alt="배너2"></a></div>
+				<div><a href="#"><img src="images/img3.jpg" alt="배너3"></a></div>
+				<div><a href="#"><img src="images/img1.jpg" alt="배너1"></a></div>
+			</div>
+			<div class="slide-title">
+				<h2>인터넷센터</h2>
+				<h4>방문을 환영합니다!</h4>
+			</div>
+		</div>
+		<div class="content clear">
+			<div class="border-wrap">
+				<div class="tabs clear">
+					<div class="tab-hover">공지사항</div>
+					<div>갤러리</div>
+				</div>
+				<div class="tab">
+					<ul class="notice">
+						<li class="clear">
+							<div class="title">
+								<a class="popup-open">
+									인터넷센터에서 12회 심포지움을 개최합니다.
+								</a>
+							</div>
+							<div class="date">2018-04-10</div>
+						</li>
+						<li class="clear">
+							<div class="title">
+								<a href="#">
+									따뜻한 인터넷을 위한 선플캠페인에 참여하세요.
+								</a>
+							</div>
+							<div class="date">2018-04-10</div>
+						</li>
+						<li class="clear">
+							<div class="title">
+								<a href="#">
+									[자료] 개인정보 보호를 위한 올바른 인터넷 사용법
+								</a>
+							</div>
+							<div class="date">2018-04-09</div>
+						</li>
+						<li class="clear">
+							<div class="title">
+								<a href="#">
+									스몸비에 대응하는 청소년 교육자료를 배포합니다.
+								</a>
+							</div>
+							<div class="date">2018-03-17</div>
+						</li>
+						<li>
+							<div class="title">
+								<a href="#">
+									인터넷센터와 함께 하실 인재를 모집합니다.
+								</a>
+							</div>
+							<div class="date">2018-03-07</div>
+						</li>
+					</ul>
+					<ul class="gallery clear">
+						<li>
+							<a href="#"><img src="images/b1.jpg" alt=""></a>
+						</li>
+						<li>
+							<a href="#"><img src="images/b2.jpg" alt=""></a>
+						</li>
+						<li>
+							<a href="#"><img src="images/b3.jpg" alt=""></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="ban-wrap">
+				<div><a href="#"><img src="images/ban1.jpg" alt="배너1"></a></div>
+				<div><a href="#"><img src="images/ban2.jpg" alt="배너1"></a></div>
+			</div>
+			<div class="link-wrap">
+				<ul class="link">
+					<li>
+						<a href="#">
+							<img src="images/link1.png" alt="링크1">
+							<h4>인터넷 정보수집 발굴</h4>
+							<div>인터넷 사례 조사</div>
+							<div>인터넷문화 관련 자료 수집</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/link2.png" alt="링크2">
+							<h4>교육 프로그램 개발</h4>
+							<div>인터넷 교육프로그램 연구 </div>
+							<div>인터넷 교육도구 개발</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/link3.png" alt="링크3">
+							<h4>역기능 예방 및 대응</h4>
+							<div>저작권 침해 예방/대응 연구</div>
+							<div>불법유해정보 유통 예방/대응 연구</div>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="footer clear">
+			<div class="logo-g">
+				<a href="#"><img src="images/logo-b.jpg" alt="하단로고"></a>
+			</div>
+			<div class="copyright">
+				<h4><a href="#">인터넷센터</a></h4>
+				<div>대표자:준선미 | 개인정보관리책임자:윤우식</div>
+				<div>사업장주소:서울특별시 금천구 가산동 가산디지털2로</div>
+			</div>
+			<div class="escrow">
+				<h5>법적고지</h5>
+				<div><a href="#">개인정보취급방침</a></div>
+				<div><a href="#">개인정보처리방침</a></div>
+			</div>
+		</div>
+	</div>
+	<div class="popup">
+		<h2 class="tit">
+			인터넷센터에서 12회 심포지움을 개최합니다.
+		</h2>
+		<div class="cont">
+			인터넷센터에서 12회 심포지움을 개최합니다. 2018-04-10
+			따뜻한 인터넷을 위한 선플캠페인에 참여하세요. 2018-04-10
 			[자료] 개인정보 보호를 위한 올바른 인터넷 사용법 2018-04-09
-			스몸비에 대응하는 청소년 교육자료를 배포합니다.	 2018-03-17
-			인터넷센터와 함께 하실 인재를 모집합니다.	 2018-03-07
-			</div>
-			<div class="bts">
-				<button type="button" class="bt-close">닫기</button>
-			</div>
+			스몸비에 대응하는 청소년 교육자료를 배포합니다. 2018-03-17
+			인터넷센터와 함께 하실 인재를 모집합니다. 2018-03-07
 		</div>
-		<script src="script/index.js"></script>
-	</body>
+		<div class="bts">
+			<button type="button" class="bt-close">닫기</button>
+		</div>
+	</div>
+	<script src="script/index.js"></script>
+</body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
